css/map.css
/*copied from body {https://www.mapbox.com/help/choropleth-studio-gl-pt-2/*/

/**
* Create a position for the map
* on the page */
#mapGL {
    position: relative;
    top: 0;
    bottom: 0;
    height: 75vh;
    /*width: 100vw;*/
}

/**
* Set rules for how the map overlays
* (info box and legend) will be displayed
* on the page. */
.map-overlay {
    position: absolute;
    top: 30vh;
    height: 20vh;
    background: rgba(255, 255, 255, 0.8);
    margin-right: 0px;
    font-family: Arial, sans-serif;
    overflow: auto;
    border-radius: 3px;
}

#overlay {
    float: right;
    margin-right: 21vw;
}

#features {
    top: 0;
    /*height: 100px;*/
    margin-top: 5em;
    width: 20vw;
    float: right;
}

#legend {
    padding: .2rem;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
    line-height: 16px;
    /*height: 150px;*/
    margin-bottom: 40px;
    width: 100px;
    font-size: .7rem;
}

/*.legend-key {*/
    /*display: inline-block;*/
    /*border-radius: 20%;*/
    /*width: 10px;*/
    /*height: 10px;*/
    /*margin-right: 5px;*/
/*}*/



.zone-legend {
    border: solid dimgrey;
}

.zone-legend p {
    margin-bottom: .1rem;
}

.A2 {
    background-color: rgb(202, 228, 189)
}

.A3 {
    background-color: rgb(168, 219, 66)
}

.A4 {
    background-color: rgb(92, 138, 69)
}

.B1 {
    background-color: rgb(241, 182, 182)
}

.B2 {
    background-color: rgb(242, 205, 157)
}

.IB {
    background-color: rgb(243, 243, 204)
}

.I1 {
    background-color: rgb(243, 243, 90)
}

.R1 {
    background-color: rgb(196, 143, 114)
}

.R3 {

}

.SR {

}

